4주차 과제(미완)

--- a/src/apple/apple.html
+++ b/src/apple/apple.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,127 @@
     <link rel="stylesheet" href="./styles/apple.css" />
   </head>
   <body>
-    <!-- 카드 레이아웃 -->
+    <div class="apple">
+      <!-- 카드 레이아웃 -->
+      <!-- ipad pro -->
+      <section class="ipad">
+        <!-- 제목 -->
+        <div class="title">iPad Pro</div>
 
+        <!-- 본문 텍스트 -->
+        <div class="text">
+          놀라우리만치 얇다.
+          <br />
+          엄청나게 강력하다.
+        </div>
+
+        <!-- 서브 텍스트 -->
+        <div class="sub">출시일 추후 공개</div>
+
+        <!-- 버튼 -->
+        <div class="tbutton">
+          <button class="plus">더 알아보기</button>
+          <button class="view">가격 보기</button>
+        </div>
+      </section>
+      <!-- ipad air -->
+      <section class="ipad-air">
+        <!-- 제목 -->
+        <div class="title">iPad air</div>
+
+        <!-- 본문 텍스트 -->
+        <div class="text">
+          두 가지 사이즈. 더 빠른 칩.
+          <br />
+          무엇이든 거뜬하게.
+        </div>
+
+        <!-- 서브 텍스트 -->
+        <div class="sub">출시일 추후 공개</div>
+
+        <!-- 버튼 -->
+        <div class="tbutton">
+          <button class="plus">더 알아보기</button>
+          <button class="view">가격 보기</button>
+        </div>
+      </section>
+      <!-- 15pro -->
+      <section class="iphone-15-pro">
+        <!-- 제목 -->
+        <div class="title">iPhone 15 Pro</div>
+
+        <!-- 본문 텍스트 -->
+        <div class="text">티타늄. 초강력. 초경량. 초프로.</div>
+
+        <!-- 버튼 -->
+        <div class="tbutton">
+          <button class="plus">더 알아보기</button>
+          <button class="view">가격 보기</button>
+        </div>
+      </section>
+      <!-- 15 -->
+      <section class="iphone-15">
+        <!-- 제목 -->
+        <div class="title">iPhone 15</div>
+
+        <!-- 본문 텍스트 -->
+        <div class="text">
+          새로운 카메라. <br />새로운 디자인. <br />
+          새로움이 물씬.
+        </div>
+
+        <!-- 버튼 -->
+        <div class="tbutton">
+          <button class="plus">더 알아보기</button>
+          <button class="view">가격 보기</button>
+        </div>
+      </section>
+
+      <!-- watch -->
+      <section class="watch">
+        <!-- 제목 -->
+        <div class="title">WATCH</div>
+
+        <!-- 본문 텍스트 -->
+        <div class="text">보다 똑똑. 보다 또렷. 보다 강력.</div>
+
+        <!-- 버튼 -->
+        <div class="tbutton">
+          <button class="plus">더 알아보기</button>
+          <button class="view">가격 보기</button>
+        </div>
+      </section>
+      <!-- macbook air -->
+      <section class="macbook-air">
+        <!-- 제목 -->
+        <div class="title">MacBook Air</div>
+
+        <!-- 본문 텍스트 -->
+        <div class="text">날렵하게. 강력하게. M3답게.</div>
+
+        <!-- 버튼 -->
+        <div class="tbutton">
+          <button class="plus">더 알아보기</button>
+          <button class="view">가격 보기</button>
+        </div>
+      </section>
+      <!-- airpods pro -->
+      <section class="airpods-pro">
+        <!-- 제목 -->
+        <div class="title">airPods Pro</div>
+
+        <!-- 본문 텍스트 -->
+        <div class="text">
+          새로운 카메라. <br />새로운 디자인. <br />
+          새로움이 물씬.
+        </div>
+
+        <!-- 버튼 -->
+        <div class="tbutton">
+          <button class="plus">더 알아보기</button>
+          <button class="view">가격 보기</button>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
